; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/rewrite/extr_rewriteManip.c_map_variable_attnos.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/rewrite/extr_rewriteManip.c_map_variable_attnos.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i32, i32, i32*, i32, i32* }

@map_variable_attnos_mutator = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @map_variable_attnos(i32* %0, i32 %1, i32 %2, i32* %3, i32 %4, i32 %5, i32* %6) #0 {
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32*, align 8
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32*, align 8
  %15 = alloca %struct.TYPE_2__, align 8
  store i32* %0, i32** %8, align 8
  store i32 %1, i32* %9, align 4
  store i32 %2, i32* %10, align 4
  store i32* %3, i32** %11, align 8
  store i32 %4, i32* %12, align 4
  store i32 %5, i32* %13, align 4
  store i32* %6, i32** %14, align 8
  %16 = load i32, i32* %9, align 4
  %17 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %15, i32 0, i32 0
  store i32 %16, i32* %17, align 8
  %18 = load i32, i32* %10, align 4
  %19 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %15, i32 0, i32 1
  store i32 %18, i32* %19, align 4
  %20 = load i32*, i32** %11, align 8
  %21 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %15, i32 0, i32 5
  store i32* %20, i32** %21, align 8
  %22 = load i32, i32* %12, align 4
  %23 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %15, i32 0, i32 2
  store i32 %22, i32* %23, align 8
  %24 = load i32, i32* %13, align 4
  %25 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %15, i32 0, i32 4
  store i32 %24, i32* %25, align 8
  %26 = load i32*, i32** %14, align 8
  %27 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %15, i32 0, i32 3
  store i32* %26, i32** %27, align 8
  %28 = load i32*, i32** %14, align 8
  store i32 0, i32* %28, align 4
  %29 = load i32*, i32** %8, align 8
  %30 = load i32, i32* @map_variable_attnos_mutator, align 4
  %31 = bitcast %struct.TYPE_2__* %15 to i8*
  %32 = call i32* @query_or_expression_tree_mutator(i32* %29, i32 %30, i8* %31, i32 0)
  ret i32* %32
}

declare dso_local i32* @query_or_expression_tree_mutator(i32*, i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
